# LingMessage

./: .gitignore  AGENTS.md  CHARTER.md  CRUSH.md  README.md  pyproject.toml
docs/: AI_AGENT_SAFETY_RESEARCH_BRIEF_20260411.md  ARCHITECTURE_UPGRADE_EVALUATION.md  HISTORIAN_RECORD_20260406.md  HISTORIAN_SELF_REFLECTIVITY.md  HISTORIAN_SYSTEM_DESIGN.md  IDENTITY_HALLUCINATION_CASE_CRUSH_20260407.md  IDENTITY_HALLUCINATION_RECURSIVE_CASE_20260409.md  IDENTITY_SELF_AWARENESS_CASE.md  LINGFLOW_PLUS_ARCHITECTURE_REFLECTION.md  SECURITY_AUDIT_20260411.md  SESSION_REPORT_AI_HALLUCINATION_DISCUSSION_20260406.md  SESSION_SUMMARY_SYSTEM_AUDIT_20260406.md  SYSTEM_AUDIT_20260407.md  SYSTEM_AUDIT_REPORT_20260406.md  api_reference.md  session_report_20260403_en.md  session_report_20260403_zh.md
lingmessage/: adapters.py  annotate.py  capability.py  cli.py  compat.py  discuss.py  lingbus.py  mailbox.py  poller.py  seed.py  signing.py  types.py
mcp_servers/: annotate_server.py  lingbus_server.py  signing_server.py
tests/: test_adapters.py  test_annotate.py  test_capability.py  test_cli.py  test_compat.py  test_discuss.py  test_identity_registry.py  test_lingbus.py  test_lingmessage.py  test_mcp_servers.py  test_poller.py  test_signing.py
