[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingmessage"
version = "0.1.0"
description = "灵信 (LingMessage) — 灵字辈跨项目讨论协议与框架"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]
discuss = [
    "dashscope>=1.14.0",
]

[project.scripts]
lingmessage = "lingmessage.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
